# duomic

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  install-remote.sh  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
Driver/: DRIVER_IPC.md
Driver/duomicDriver/: CMakeLists.txt  Driver.cpp  Info.plist.in
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: main.rs
cli/src/audio/: capture.rs  devices.rs  mod.rs
cli/src/commands/: run.rs  status.rs
cli/src/config/: mod.rs  store.rs
cli/src/ipc/: mod.rs  shm.rs  socket.rs
cli/src/tui/: app.rs  events.rs  mod.rs
cli/src/tui/widgets/: channel_picker.rs  device_list.rs  level_meter.rs  mod.rs
scripts/: check-driver.sh  check.sh  test-release.sh
scripts/driver/: postinstall  preinstall
