[package]
name = "duomic"
version = "0.1.1"
edition = "2021"
authors = ["duomic"]
description = "Split multi-channel USB mic into virtual mono mics"
license = "MIT"

[[bin]]
name = "duomic"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Audio
cpal = "0.15"

# IPC
nix = { version = "0.29", features = ["socket", "mman", "fs"] }
memmap2 = "0.9"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async (for event handling)
crossbeam-channel = "0.5"

# Signal handling
ctrlc = "3.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
